--- a/gb/19/10/30/n11623492.md
+++ b/gb/19/10/30/n11623492.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yupkxx301/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yupkxx301/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/yupkxx301/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yupkxx301/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/yupkxx301/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yupkxx301/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/yupkxx301/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yupkxx301/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/yupkxx301/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yupkxx301/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/yupkxx301/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yupkxx301/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/yupkxx301/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yupkxx301/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/yupkxx301/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yupkxx301/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/yupkxx301/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yupkxx301/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/yupkxx301/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yupkxx301/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yupkxx301/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yupkxx301/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yupkxx301/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yupkxx301/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>美二战驱逐舰残骸在菲律宾海被发现</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/10/USSJohnstonDD557-600x400.jpg" />
 <h6>专家认为，日前在菲律宾海海底发现的船只残骸就是美国二战时期所用的约翰斯顿号驱逐舰（USS Johnston DD-557）。图为约翰斯顿号。（公有领域）
 </h6>
 <hr>
-	<p>【大纪元2019年10月31日讯】（大纪元记者张婷综合报导）研究人员周三（10月30日）宣布，深海研究船“海燕号”（Research Vessel Petrel）在<ahref="https://github.com/yupkxx301/djy/blob/master/gb/tag/%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%B5%B7.md#1">菲律宾海</a>发现了一艘美国<ahref="https://github.com/yupkxx301/djy/blob/master/gb/tag/%E4%BA%8C%E6%88%98%E9%A9%B1%E9%80%90%E8%88%B0.md#1">二战驱逐舰</a>的残骸。这是有史以来在该海域所发现的最深<ahref="https://github.com/yupkxx301/djy/blob/master/gb/tag/%E6%B2%89%E8%88%B9.md#1">沉船</a>。</p>
-<p>据福克斯新闻报导，“海燕号”的专家们在<ahref="https://github.com/yupkxx301/djy/blob/master/gb/tag/%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%B5%B7.md#1">菲律宾海</a>20,406英尺深的地方发现了该船残骸。探险家们使用了海底无人机确定了这艘神秘船只的位置。该船被认为是约翰斯顿号驱逐舰（USS Johnston DD-557）。</p>
+	<p>【大纪元2019年10月31日讯】（大纪元记者张婷综合报导）研究人员周三（10月30日）宣布，深海研究船“海燕号”（Research Vessel Petrel）在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%B5%B7.md#1">菲律宾海</a>发现了一艘美国<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BA%8C%E6%88%98%E9%A9%B1%E9%80%90%E8%88%B0.md#1">二战驱逐舰</a>的残骸。这是有史以来在该海域所发现的最深<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B2%89%E8%88%B9.md#1">沉船</a>。</p>
+<p>据福克斯新闻报导，“海燕号”的专家们在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%B5%B7.md#1">菲律宾海</a>20,406英尺深的地方发现了该船残骸。探险家们使用了海底无人机确定了这艘神秘船只的位置。该船被认为是约翰斯顿号驱逐舰（USS Johnston DD-557）。</p>
 <p>约翰斯顿号是一艘二战时期美国海军的弗莱彻级驱逐舰（Fletcher-class destroyer），在1944年10月的萨马岛海战（Battle off Samar）中沉没。</p>
 <p>无人机捕捉到的镜头显示这艘驱逐舰的残骸就分布在海床上。</p>
-<p>在当年的萨马岛海战中，除了约翰斯顿号外，美国的霍埃尔号驱逐舰（USS Hoel）也在战争中沉没。但专家们相信，这次发现的海底<ahref="https://github.com/yupkxx301/djy/blob/master/gb/tag/%E6%B2%89%E8%88%B9.md#1">沉船</a>更有可能是约翰斯顿号。</p>
+<p>在当年的萨马岛海战中，除了约翰斯顿号外，美国的霍埃尔号驱逐舰（USS Hoel）也在战争中沉没。但专家们相信，这次发现的海底<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B2%89%E8%88%B9.md#1">沉船</a>更有可能是约翰斯顿号。</p>
 <p>“我们认为，这是约翰斯顿号驱逐舰的残骸，” “海燕号”所属的美国瓦肯公司（Vulcan Inc）的海底作业主管罗伯特·卡夫（Robert Kraft）在一份声明中说。</p>
-<figure id="attachment_11623508" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/10/1600px-RV_Petrel_in_Surigao_City_after_her_2018_retrofit_in_Singapore.jpg"><img class="size-large wp-image-11623508" src="https://i.epochtimes.com/assets/uploads/2019/10/1600px-RV_Petrel_in_Surigao_City_after_her_2018_retrofit_in_Singapore-600x338.jpg" alt="" width="600" b="338" /></a><figcaption class="wp-caption-text">图为深海研究船“海燕号”。（<ahref="https://commons.wikimedia.org/wiki/File:RV_Petrel_in_Surigao_City_after_her_2018_retrofit_in_Singapore.jpg ">Jake7499/Wikimedia commons</a>）</figcaption></figure>
+<figure id="attachment_11623508" aria-describedby="caption-attachment-11623508" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/10/1600px-RV_Petrel_in_Surigao_City_after_her_2018_retrofit_in_Singapore.jpg"><img class="size-large wp-image-11623508" src="https://i.epochtimes.com/assets/uploads/2019/10/1600px-RV_Petrel_in_Surigao_City_after_her_2018_retrofit_in_Singapore-600x338.jpg" alt="" width="600" b="338" /></a><figcaption id="caption-attachment-11623508" class="wp-caption-text">图为深海研究船“海燕号”。<ahref="https://commons.wikimedia.org/wiki/File:RV_Petrel_in_Surigao_City_after_her_2018_retrofit_in_Singapore.jpg ">Jake7499/Wikimedia commons</a>）</figcaption></figure>
 <p>卡夫还表示，没有证据表明这是霍埃尔号驱逐舰。从这次发现的位置来看，驱逐舰的残骸是在萨马岛海战的后期沉入海底，而霍埃尔号驱逐舰之前就已经沉没了。</p>
 <p>约翰斯顿号驱逐舰是第一艘以约翰·V·约翰斯顿（John V. Johnston）中尉命名的美国海军船舰。本舰以其在萨马岛海战中的英勇战斗闻名。除了总统单位嘉奖之外，约翰斯顿号在二战服役期间共获得6枚战斗之星。</p>
 <p>约翰斯顿号在1944年10月25日在与日军激烈战斗后沉没。根据美国“海军历史与遗产司令部”的信息，341名船员中仅有141名幸存。</p>
@@ -24,42 +24,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/19/7/26/n11410122.md#1">维州海底沉船文物遭窃 疑专业潜水员作案</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/19/9/24/n11544412.md#1">欧洲发现失落大陆 1.4亿年前被埋在南欧底下</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/11/n12396468.md#1">“温和的巨人” 一岁狗狗体型硕大常被误认是熊</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/11/n12396114.md#1">沉睡海底80年 二战德军名舰残骸现挪威海域</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/7/26/n11410122.md#1">维州海底沉船文物遭窃 疑专业潜水员作案</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/9/24/n11544412.md#1">欧洲发现失落大陆 1.4亿年前被埋在南欧底下</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679744.md#1">中共与索罗门密商军事合作 澳纽“严正关切”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680073.md#1">蓬佩奥：美应视中共为敌手 认清其威胁俱增</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/26/n11280593.md#1" target="_blank">观雨堂主：吴晗——不止是个人的悲哀</a></li><li><a href="https://github.com/yupkxx301/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/18/n3685199.md#1" target="_blank">难以置信的事实</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/27/n10175949.md#1" target="_blank">袁斌：中共一波又一波的残忍内斗</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/5/n10279698.md#1" target="_blank">百岁老人：法轮功延长了我的寿命</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/3/n12378183.md#1">书生神游天宫 原来世人多从天上来</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/2/n12374931.md#1">《傲慢与偏见》：19世纪名著至今仍能启迪人心</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/6/21/n12202372.md#1">龄官画蔷  从此各人得各人的眼泪</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/4/n12380954.md#1">【馨香雅句】原来这项技能承传千年 曾让中国人武艺高强</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/8/23/n12352129.md#1">到手钱财如水流？古今三故事 道出败财因由</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/10/n12395139.md#1">【新闻看点】党媒呛台扬言开战 中共能挡美军？</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/10/n12395255.md#1">【时事纵横】习抄袭港人金句？中南海最恐惧啥</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/8/26/n12358513.md#1">【欺世大观】鲜为人知：五面间谍被毛泽东逼疯</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/9/n12390634.md#1">李克强与习“不同调”神情恍惚？</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/9/n12390183.md#1">中共报复捷克钢琴商 富豪出手买下送学校</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/9/n12391877.md#1">中共大使刘晓明追色情帖 英国政治家嘲讽</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/9/n12391838.md#1">为家人挺过第18次化疗 余苑绮：最想回家</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/8/n12389885.md#1">32岁继女近照曝光 林青霞曾获赞世上最好继母</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/8/n12389717.md#1">阿娇厦门动第二次手术 头部表面一层缝66针</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/8/n12390081.md#1">改编《木兰诗》讽撑警主角 视网膜获赞太有才</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/10/n12395006.md#1">新疆争议发酵？传中共下令禁报《花木兰》</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/9/n12390935.md#1">定力考验：哈士奇和黄金猎犬谁会偷吃烤鸡？</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/9/n12391179.md#1">中共若入侵台湾 美军空投水雷可阻止？</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/9/n12392244.md#1">不沾锅别用错 厨房6样东西使用不当小心吃毒</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/9/n12392319.md#1">按摩3穴位肩颈变柔软 中医教你挥别肩颈痛</a></li>
-<li><a href="https://github.com/yupkxx301/djy/blob/master/gb/20/9/9/n12391049.md#1">获美65所大学录取 他还是一名鹰级童子军</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yupkxx301/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yupkxx301/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/30/n11623492.htm">美二战驱逐舰残骸在菲律宾海被发现</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/30/n11623492.htm">美二战驱逐舰残骸在菲律宾海被发现</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/yupkxx301/djy/blob/master/gb/19/10/30/n11623492.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yupkxx301/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yupkxx301/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yupkxx301/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yupkxx301/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yupkxx301/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/10/30/n11623492.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
